--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-12-25  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Update
+	* no.po: Update
+
 2003-10-13  Marcel Telka  <marcel@telka.sk>
 
 	* sk.po: Updated Slovak translation.
