--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-01  Steve Murphy  <murf@e-tools.com>
+
+        * configure.in: Added "rw" to ALL_LINGUAS.
+
 2005-03-08  Naba Kumar  <naba@gnome.org>
 
 	* configure.in, Makefile.am: Disabling symbol-browser build as it
