--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-17  Takeshi AIHANA <aihana@gnome.gr.jp>
+
+	* ja.po: Updated Japanese translation.
+
 2005-04-01  Steve Murphy  <murf@e-tools.com>
 
         * rw.po: Added Kinyarwanda translation.
