--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-24  Pawan Chitrakar  <pchitrakar@gmail.com>
+
+	* configure.in: Added ne in ALL_LINGUAS
+
 2005-07-27  Naba Kumar  <naba@gnome.org>
 
 	* configure.in,	gdl-1.0.pc.in, gdl.spec.in: Removed libbonobo dep.
