--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-12  Daniel Nylander  <po@danielnylander.se>
+
+        * sv.po: Updated Swedish translation
+	
 2005-11-13  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: Updated Spanish translation.
