--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-28  Johannes Schmid <jhs@cvs.gnome.org>
+
+	* POTFILES.in: Updated
+
 2006-04-16  Ilkka Tuohela  <hile@iki.fi>
 
 	* fi.po: Added Finnish translation.
