--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 === GDL 0.6.1 ===
 
+2005-10-15  Naba Kumar  <naba@gnome.org>
+
+	* NEWS: More updates.
+	
 2006-05-12  Johannes Schmid <jhs@cvs.gnome.org>
 	
 	* NEWS, MAINTAINERS: Updated
