--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-24  Francisco Javier F. Serrador  <serrador@openshine.com>
+
+	* es.po: Updated Spanish translation.
+
 2006-04-28  Johannes Schmid <jhs@cvs.gnome.org>
 
 	* POTFILES.in: Updated
