--- a/po/de.po
+++ b/po/de.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: gdl\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-03-10 09:28+0100\n"
-"PO-Revision-Date: 2005-03-10 09:26+0100\n"
-"Last-Translator: Frank Arnold <frank@scirocco-5v-turbo.de>\n"
+"PO-Revision-Date: 2006-06-15 16:20+0200\n"
+"Last-Translator: Hendrik Richter <hendrikr@gnome.org>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -679,7 +679,7 @@ msgstr "Aktuelle Datei _festlegen"
 
 #: ../symbol-browser-control/test-symbol-browser.c:168
 msgid "Open file..."
-msgstr "Datei öffnen..."
+msgstr "Datei öffnen …"
 
 #: ../symbol-browser-control/test-symbol-browser.c:170
 msgid "Set current file..."
@@ -687,7 +687,7 @@ msgstr "Aktuelle Datei festlegen"
 
 #: ../symbol-browser-control/test-symbol-browser.c:172
 msgid "Save file..."
-msgstr "Datei speichern..."
+msgstr "Datei speichern …"
 
 #: ../symbol-browser-control/test-symbol-browser.c:295
 msgid "Can't initialize bonobo!"
@@ -738,3 +738,6 @@ msgstr "Bonobo konnte nicht initialisiert werden!"
 
 #~ msgid "Select a filename to save"
 #~ msgstr "Wählen Sie einen Dateinamen zum Speichern"
+
+
+
